--- a/server/pom.xml
+++ b/server/pom.xml
@@ -51,6 +51,65 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>com.googlecode.maven-download-plugin</groupId>
+                <artifactId>download-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <executions>
+                    <execution>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <configuration>
+                            <url>${otel.download.url}</url>
+                            <unpack>false</unpack>
+                            <outputDirectory>${project.build.directory}/otel</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-dependency-plugin</artifactId>-->
+<!--                <version>3.1.2</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>copy</id>-->
+<!--                        <phase>package</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>copy</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                <configuration>-->
+<!--                    <artifactItems>-->
+<!--                        <artifactItem>-->
+<!--                            <groupId>io.opentelemetry.javaagent</groupId>-->
+<!--                            <artifactId>opentelemetry-javaagent</artifactId>-->
+<!--                            <version>${otel.version}</version>-->
+<!--                            <type>jar</type>-->
+<!--                            <overWrite>false</overWrite>-->
+<!--                            <outputDirectory>${project.build.directory}/otel</outputDirectory>-->
+<!--                            <destFileName>opentelemetry-javaagent.jar</destFileName>-->
+<!--                        </artifactItem>-->
+<!--                        <artifactItem>-->
+<!--                            <groupId>io.opentelemetry.javaagent</groupId>-->
+<!--                            <artifactId>opentelemetry-javaagent-exporter-jaeger</artifactId>-->
+<!--                            <version>${otel.version}</version>-->
+<!--                            <type>jar</type>-->
+<!--                            <overWrite>false</overWrite>-->
+<!--                            <outputDirectory>${project.build.directory}/otel</outputDirectory>-->
+<!--                            <destFileName>opentelemetry-javaagent-exporter-jaeger.jar</destFileName>-->
+<!--                        </artifactItem>-->
+<!--                    </artifactItems>-->
+<!--                    <outputDirectory>${project.build.directory}/wars</outputDirectory>-->
+<!--                    <overWriteReleases>false</overWriteReleases>-->
+<!--                    <overWriteSnapshots>true</overWriteSnapshots>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
@@ -61,6 +120,37 @@
                         <phase>post-integration-test</phase>
                         <goals>
                             <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>dockerfile-maven-plugin</artifactId>
+                <version>${dockerfile.maven.version}</version>
+                <configuration>
+                    <skip>false</skip>
+                    <repository>basaki/otel-server</repository>
+                    <tag>${project.version}</tag>
+                    <buildArgs>
+                        <SERVICE_NAME>${project.artifactId}</SERVICE_NAME>
+                        <PROJECT_VERSION>${project.version}</PROJECT_VERSION>
+                    </buildArgs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>build-image</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>push-image</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>push</goal>
                         </goals>
                     </execution>
                 </executions>
